--- a/pages/setting/index.html
+++ b/pages/setting/index.html
@@ -1,1 +1,62 @@
-
+<!DOCTYPE html>
+<html lang='ja'>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="lego0821のアカウントです。">
+        <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
+        <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
+        <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+        <link rel='manifest' href='manifest.json'>
+        <title>lego0821</title>
+        <style>
+            h1,h2,h3,h4,h5,h6{
+                font-weight: normal;
+                margin: 0;
+                padding: 0;
+            }
+            #top{
+                opacity: 0;
+                z-index: -1;
+            }
+            .options{
+              border-top: 1px solid gray;
+              border-bottom: 1px solid gray;
+            }
+        </style>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
+                <li id='navigations'><a href="https://lego0821.github.io/lego0821/pages/productions/" class='navs'>作品</a><a href="https://lego0821.github.io/lego0821/pages/notification/" class='navs'>通知</a></li>
+            </ul>
+        </nav>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>設定</h1>
+        <h2>Cookie</h2>
+        <div class='options' disable>
+          <h3>Cookieを承認する</h3>
+          <select style='border-radius: 10px' name='cookieAgree'>
+            <option value='agree'>承認する</option>
+            <option value='no'>承認する</option>
+          </select>
+        </div>
+        <div class='options'>
+          <h3>Cookieの削除</h3>
+          <button id='deleteCookie'>削除</button>
+        </div>
+        <a href='#' class='animation' id='top'>
+            ▲TOP
+        </a>
+        <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
+        <script>
+          document.getElementById('deleteCookie').addEventListener('click',() => {
+            Cookies.remove('notification');
+          },false);
+        </script>
+    </body>
+</html>
