--- a/pages/setting/index.html
+++ b/pages/setting/index.html
@@ -40,9 +40,9 @@
         <h2>Cookie</h2>
         <div class='options' disable>
           <h3>Cookieを承認する</h3>
-          <select style='border-radius: 10px' name='cookieAgree'>
+          <select style='border-radius: 5px' id='cookieAgree' disable>
             <option value='agree'>承認する</option>
-            <option value='no'>承認する</option>
+            <option value='no'>承認しない</option>
           </select>
         </div>
         <div class='options'>
@@ -54,9 +54,14 @@
         </a>
         <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
         <script>
-          document.getElementById('deleteCookie').addEventListener('click',() => {
+        document.getElementById('deleteCookie').addEventListener('click',() => {
             Cookies.remove('notification');
-          },false);
+        },false);
+        document.getElementById('cookieAgree').addEventListener('change',() => {
+            if(this.value === 'no'){
+                Cookies.remove('notification');
+            }
+        },false);
         </script>
     </body>
 </html>
